syntax = "proto3";

import "filters.proto";
import "types.proto";

package co.topl.genus.services;

service TransactionsSubscription {
  rpc Create (CreateTxsSubscriptionReq) returns (stream TxsSubscriptionRes);
}

message CreateTxsSubscriptionReq {
  TransactionFilter filter = 1;
  uint64 start_height = 2;
  uint32 confirmation_depth = 3;
}


message TxsSubscriptionRes {
  message Failure {
    oneof reason {
      string invalid_request = 1;
      string data_connection_error = 2;
    }
  }

  oneof result {
    Transaction success = 1;
    Failure failure = 2;
  }
}
